[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/scenes/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="TitleLabel" type="Label" parent="."]
margin_left = 384.0
margin_top = 64.0
margin_right = 576.0
margin_bottom = 128.0
text = "Visual Novel Typing Game"
align = 1
valign = 1

[node name="StoryModeButton" type="TextureButton" parent="."]
margin_left = 392.0
margin_top = 152.0
margin_right = 584.0
margin_bottom = 216.0

[node name="StoryModeLabel" type="Label" parent="StoryModeButton"]
margin_right = 192.0
margin_bottom = 64.0
text = "Story Mode"
align = 1
valign = 1

[node name="ChallengeModeButton" type="TextureButton" parent="."]
margin_left = 400.0
margin_top = 224.0
margin_right = 592.0
margin_bottom = 288.0

[node name="ChallengeModeLabel" type="Label" parent="ChallengeModeButton"]
margin_left = -8.0
margin_right = 184.0
margin_bottom = 64.0
text = "Challenge Mode"
align = 1
valign = 1

[node name="StatisticsMenuButton" type="TextureButton" parent="."]
margin_left = 392.0
margin_top = 312.0
margin_right = 584.0
margin_bottom = 376.0

[node name="StatisticsMenuLabel" type="Label" parent="StatisticsMenuButton"]
margin_right = 192.0
margin_bottom = 64.0
text = "Statistics Menu
"
align = 1
valign = 1

[node name="SettingsMenuButton" type="TextureButton" parent="."]
margin_left = 392.0
margin_top = 384.0
margin_right = 584.0
margin_bottom = 448.0

[node name="SettingsMenuLabel" type="Label" parent="SettingsMenuButton"]
margin_right = 192.0
margin_bottom = 64.0
text = "Settings Menu"
align = 1
valign = 1

[node name="QuitButton" type="TextureButton" parent="."]
margin_left = 392.0
margin_top = 472.0
margin_right = 584.0
margin_bottom = 536.0

[node name="QuitLabel" type="Label" parent="QuitButton"]
margin_right = 192.0
margin_bottom = 64.0
text = "Quit"
align = 1
valign = 1

[connection signal="pressed" from="StoryModeButton" to="." method="_on_StoryModeButton_pressed"]
[connection signal="pressed" from="ChallengeModeButton" to="." method="_on_ChallengeModeButton_pressed"]
[connection signal="pressed" from="StatisticsMenuButton" to="." method="_on_StatisticsMenuButton_pressed"]
[connection signal="pressed" from="SettingsMenuButton" to="." method="_on_SettingsMenuButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
